# Nucleo-F411RE-simple-project

./: .gitignore  CMakeLists.txt  README.md
Src/: gpio.h  main.c
Src/startup/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
